--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ html {
   font-weight: 500;
   color: #3b3f55;
   margin-bottom: 30px;
+  font-size: 19px;
 }
 
 .cardContainer {
@@ -100,6 +101,10 @@ html {
   opacity: 0.7;
   display: block;
   font-size: 15px;
+}
+
+.btn{
+  font-size: 14px;
 }
 
 .deleteImage{
