--- a/src/pages/AdminDashboard/Dashboard/dashboard.css
+++ b/src/pages/AdminDashboard/Dashboard/dashboard.css
@@ -117,7 +117,7 @@
     font-size: 1.25rem
 }
 
-.show {
+.sideBarShow {
     left: 0
 }
 
@@ -171,7 +171,7 @@
         padding: 1rem 1rem 0 0;
     }
 
-    .show {
+    .sideBarShow {
         width: calc(var(--nav-width) + 156px);
     }
 
