--- a/src/pages/CustomerPortal/Components/TopHeadingNav/TopHeadingNav.css
+++ b/src/pages/CustomerPortal/Components/TopHeadingNav/TopHeadingNav.css
@@ -2,3 +2,7 @@
     border: none !important;
     background-color: transparent !important;
 }
+
+.customerPortalNav{
+    font-size: 14px !important;
+}
