--- a/src/pages/AdminDashboard/Dashboard/dashboard.css
+++ b/src/pages/AdminDashboard/Dashboard/dashboard.css
@@ -18,6 +18,29 @@
 }
 
 
+.headerTgl{
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.headerTgl .header_img{
+    margin-left: 15px;
+    margin-right: 20px;
+}
+
+.navUName{
+    margin-top: 2px;
+    font-size: 14px !important;
+
+}
+
+.notificationButton{
+    padding-top: 5px;
+    margin-left: 30px;
+    cursor: pointer;
+    color: #1c3d5a;
+}
 
 .sidebarnav {
     text-decoration: none
