--- a/src/pages/AdminDashboard/Dashboard/dashboard.css
+++ b/src/pages/AdminDashboard/Dashboard/dashboard.css
@@ -1,4 +1,3 @@
-
 :root {
     --header-height: 3rem;
     --nav-width: 68px;
@@ -17,25 +16,29 @@
     background-color: #f8f9fa;
 }
 
+.sidenavlist {
+    overflow-y: auto;
+    max-height: 100vh;
+}
 
-.headerTgl{
+.headerTgl {
     justify-content: center;
     align-items: center;
     justify-content: space-between;
 }
 
-.headerTgl .header_img{
+.headerTgl .header_img {
     margin-left: 15px;
     margin-right: 20px;
 }
 
-.navUName{
+.navUName {
     margin-top: 2px;
     font-size: 14px !important;
 
 }
 
-.notificationButton{
+.notificationButton {
     padding-top: 5px;
     margin-left: 30px;
     cursor: pointer;
@@ -111,7 +114,6 @@
     align-items: center;
     column-gap: 1rem;
     padding: .5rem 0 .5rem 1.5rem
-
 }
 
 
@@ -119,7 +121,7 @@
     margin-bottom: 2rem;
     background: url('../../../assets/images/logo.png');
     background-position: top;
-    background-size:contain;
+    background-size: contain;
     background-repeat: no-repeat;
     height: 60px;
 }
@@ -146,7 +148,7 @@
 
 .body-pd {
     padding-left: calc(var(--nav-width) + 1rem);
-    
+
 }
 
 .active {
@@ -170,7 +172,7 @@
 }
 
 @media screen and (min-width: 768px) {
-    .bodyclass{
+    .bodyclass {
         margin: calc(var(--header-height) + 1rem) 0 0 0;
         padding-left: calc(var(--nav-width) + 1rem);
     }
@@ -201,5 +203,5 @@
     .body-pd {
         padding-left: calc(var(--nav-width) + 188px);
     }
-    
+
 }
