--- a/src/pages/PartnerDashboard/Dashboard/Dashboard.css
+++ b/src/pages/PartnerDashboard/Dashboard/Dashboard.css
@@ -17,6 +17,7 @@
     font-size: var(--normal-font-size);
     transition: .5s;
     background-color: #fffcf8;
+    margin-bottom: 10px !important;
 }
 
 .orangeNavBtn{
